--- a/views/about.hbs
+++ b/views/about.hbs
@@ -3,7 +3,7 @@
     <title>{{pageTitle}}</title>
 </head>
 <body>
-    <h1>Welcome to Handle Bars Template engine</h1>
+    <h1>Welcome to Dream World !!!</h1>
 </body>
 <footer>Copy Right {{copyRight}}</footer>
 </html>
