--- a/views/about.hbs
+++ b/views/about.hbs
@@ -3,7 +3,8 @@
     <title>{{pageTitle}}</title>
 </head>
 <body>
-    <h1>Welcome to Dream World !!!</h1>
+    {{> header}}
+    <h1>We are here to help you in moving to Dream World.</h1>
 </body>
-<footer>Copy Right {{copyRight}}</footer>
+{{> footer}}
 </html>
